fixed TOC lines on tablet

--- a/src/components/layouts/story/story.module.scss
+++ b/src/components/layouts/story/story.module.scss
@@ -10,7 +10,7 @@ h2 {
   margin: 0 auto $margin-75;
 
   .header-container {
-    border-bottom: $darkGrey 1px solid;
+    border-bottom: $light-grey-border 1px solid;
   }
 }
 
